# Working-with-MongoDB

./: consumer.py  docker-compose.yml  hw.py  models.py  producer.py  pyproject.toml  search_quotes.py  seed.py
